Fixed some alignments

--- a/frontend/src/app/components/views/task-create/task-create.component.less
+++ b/frontend/src/app/components/views/task-create/task-create.component.less
@@ -7,23 +7,24 @@
   top: 13vh;
   max-height: 20vh;
 
-  h1 {
-  }
-
   & > div {
     padding: 50px;
     width: 40vw;
     background-color: #fff;
     box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.68);
 
-    form {
+    .form {
       display: flex;
       align-items: center;
-      // justify-content: stretch;
-      margin-top: 20px;
 
-      div:first-child {
+      form {
+        display: flex;
+        align-items: center;
+        // justify-content: stretch;
+        margin-top: 20px;
         width: 80%;
+        flex-direction: column;
+        align-items: flex-start;
 
         textarea {
           width: 95%;
@@ -34,30 +35,30 @@
         }
 
         input {
-          margin-bottom: 10px;
+          // margin-bottom: 10px;
           margin-right: 25px;
           width: 95%;
-          height: 50px;
+          height: 49px;
           padding: 6px 10px;
           border-radius: 5px;
           font-size: 1.5rem;
         }
       }
 
-      div:nth-child(2) {
+      div.submit {
         display: flex;
-        justify-content: center;
-        align-items: center;
         width: 20%;
-
+        height: 50px;
+        
         button {
+          height: 47px;
           color: #fff;
           font-weight: bold;
           font-size: 1.5rem;
           background-color: #ff33ae;
           border: none;
           outline: none;
-          padding: 7px 20%;
+          padding: 5px 20%;
           border-radius: 5px;
           text-align: center;
           cursor: pointer;
